infra/telemetry/boundary/operator-metrics-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pgcf-operator-metrics-ingress
  namespace: pgcf-monitoring
  labels:
    app.kubernetes.io/part-of: cloudflare-postgres
    app.kubernetes.io/managed-by: Flux
    kustomize.toolkit.fluxcd.io/prune: disabled
spec:
  endpointSelector: {}
  enableDefaultDeny:
    ingress: true
    egress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: pgcf-monitoring
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
